# pycroscopy

./: .buildinfo  .gitignore  .travis.yml  LICENSE.txt  README.md  README.rst  ToDo.rst  about.html  api.html  contact.html  contribution_guidelines.html  credits.html  ecosystem.html  external_guides.html  faq.html  genindex.html  getting_started.html  gwyddion_script.py  index.html  install.html  objects.inv  papers_conferences.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  sg_execution_times.html  translator_test.py  translator_test_forc.py  whats_new.html
.doctrees/: about.doctree  api.doctree  contact.doctree  contribution_guidelines.doctree  credits.doctree  ecosystem.doctree  environment.pickle  external_guides.doctree  faq.doctree  getting_started.doctree  index.doctree  install.doctree  papers_conferences.doctree  sg_execution_times.doctree  whats_new.doctree
_autosummary/: pycroscopy.analysis.html  pycroscopy.io.html  pycroscopy.processing.html  pycroscopy.viz.html
_sources/: api.rst.txt  contribution_guidelines.rst.txt  ecosystem.rst.txt  external_guides.rst.txt  getting_started.rst.txt  install.rst.txt
_static/: documentation_options.js
auto_examples/: index.html  sg_execution_times.html
data/: 131017Spectroscopy002.gwy  131017Spectroscopy002.h5  NanoIR.txt  SingFreqPFM_0003.gwy  SingFreqPFM_0003.h5  chip.h5  double.ibw  textWave.ibw  version2.ibw  version5.ibw  zeroPointWave.ibw
docs/: Data_Format.md  Data_Format.rst  Makefile  Pycroscopy_Data_Formatting.pptx  about.rst  api.rst  conf.py  contact.rst  contribution_guidelines.rst  credits.rst  data_format.rst  ecosystem.rst  external_guides.rst  faq.rst  getting_started.rst  index.rst  install.rst  matlab_to_python.rst  modules.rst  package_organization.rst  papers_conf.rst  papers_conferences.rst  pycroscopy.analysis.rst  pycroscopy.analysis.tests.rst  pycroscopy.analysis.utils.rst  pycroscopy.io.dm4reader.rst  pycroscopy.io.rst  pycroscopy.io.tests.rst  pycroscopy.io.translators.df_utils.dm4reader.rst  pycroscopy.io.translators.df_utils.rst  pycroscopy.io.translators.rst  pycroscopy.processing.rst  pycroscopy.rst  pycroscopy.tests.rst  pycroscopy.viz.rst  requirements.txt  translators.rst  unit_tests_to_examples.rst  whats_new.rst
examples/: README.txt  example_example.py  load_dataset_example.py  microdata_example.py  plot_fft_2d_filtering.py  plot_image_registration.py  plot_multidimensional_data.py  plot_numpy_translator.py  plot_parallel_computing.py  plot_process.py  plot_spectral_unmixing.py  plot_translator_tutorial.py  plot_writing_to_h5.py  tutorial_01_interacting_w_h5_files.py  tutorial_01_translator.py  tutorial_03_multidimensional_data.py
jupyter_notebooks/: 01_Tutorial_Translation.ipynb  4D_Stem.ipynb  STS_LDOS.ipynb  (+41 more)
(+764 files in other folders)
